css/style.css
/* ... */
.footer-text .copyright-text a {
  color: #a0a1b5;
}

.footer-text .copyright-text a:hover {
  color: #f44949;
}

.footer-text .ft-social a {
  display: inline-block;
  width: 40px;
  height: 40px;
  text-align: center;
  line-height: 40px;
  font-size: 16px;
  color: #a3a3ae;
  border: 1px solid #45464e;
  border-radius: 50%;
  margin-right: 15px;
}

.footer-text .ft-social a:last-child {
  margin-right: 0;
}
/* ----------------------------------- Other Pages Styles ------------------------------- */
/*---------------------
  Breadcrumb
-----------------------*/

.breadcrumb-section {
  padding: 75px 0 75px;
}

.breadcrumb-text {
  text-align: center;
}

.breadcrumb-text h2 {
  font-size: 40px;
  color: #171822;
  font-weight: 600;
  margin-bottom: 14px;
}

.breadcrumb-text .bt-option a {
  font-size: 18px;
  color: #6a6b7c;
  display: inline-block;
  margin-right: 25px;
  position: relative;
}

.breadcrumb-text .bt-option a:after {
  position: absolute;
  right: -17px;
  top: 2px;
  content: "";
  font-family: "FontAwesome";
}

.breadcrumb-text .bt-option span {
  display: inline-block;
  color: #a0a1b5;
}
/*---------------------
  About Section
-----------------------*/

.about-section {
  padding-top: 0;
  padding-bottom: 90px;
}

.about-section .section-title {
  text-align: left;
}

.about-section .section-title h2 {
  margin-bottom: 20px;
}

.about-section .section-title p {
  font-size: 16px;
}

.about-section .section-title p.f-para {
  margin-bottom: 20px;
}

.about-pic {
  -webkit-box-shadow: 0px 0px 30px rgba(11, 12, 48, 0.15);
  box-shadow: 0px 0px 30px rgba(11, 12, 48, 0.15);
}

.about-pic img {
  min-width: 100%;
}

.about-text {
  padding-top: 20px;
}

.about-text h3 {
  color: #171822;
  font-weight: 600;
  margin-bottom: 25px;
}

.about-text p {
  margin-bottom: 20px;
}

.about-text ul li {
  font-size: 16px;
  color: #6a6b7c;
  line-height: 30px;
  list-style: none;
}

.about-text ul li span {
  color: #f44949;
}
/*---------------------
  Story Section
-----------------------*/

.story-section {
  padding-bottom: 30px;
}

.story-section .section-title {
  text-align: left;
}

.story-section .section-title h2 {
  margin-bottom: 0;
}

.story-left {
  padding-right: 40px;
}

.story-right {
  padding-left: 40px;
}

.story-item {
  margin-bottom: 28px;
}

.story-item h2 {
  color: #f44949;
  font-weight: 600;
  float: left;
  margin-right: 30px;
  line-height: 42px;
}

.story-item .si-text {
  overflow: hidden;
}

.story-item .si-text h4 {
  color: #171822;
  font-weight: 600;
  line-height: 36px;
  margin-bottom: 14px;
}
/*---------------------
  Testimonial Section
-----------------------*/

.testimonial-section {
  padding-bottom: 40px;
  overflow: hidden;
}

.testimonial-section .section-title {
  margin-bottom: 26px;
}

.testimonial-slider .col-lg-6 {
  max-width: 100%;
}

.testimonial-slider.owl-carousel .owl-stage-outer {
  padding-bottom: 60px;
  padding-top: 30px;
}

.testimonial-slider.owl-carousel .owl-nav button {
  height: 50px;
  width: 50px;
  text-align: center;
  line-height: 50px;
  font-size: 30px;
  color: #171822;
  background: #f4f6f8;
  border-radius: 50%;
  position: absolute;
  left: -66px;
  top: 50%;
  -webkit-transform: translateY(-40px);
  -ms-transform: translateY(-40px);
  transform: translateY(-40px);
  -webkit-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
}

.testimonial-slider.owl-carousel .owl-nav button:hover {
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    from(#ee8425),
    to(#f9488b)
  );
  background: -o-linear-gradient(left, #ee8425, #f9488b);
  background: linear-gradient(to right, #ee8425, #f9488b);
  color: #ffffff;
}

.testimonial-slider.owl-carousel .owl-nav button.owl-next {
  left: auto;
  right: -66px;
}

.testimonial-item {
  background: #ffffff;
  -webkit-box-shadow: 0px 6px 20px rgba(11, 12, 48, 0.15);
  box-shadow: 0px 6px 20px rgba(11, 12, 48, 0.15);
  border-radius: 4px;
  position: relative;
  padding: 40px 40px 15px 40px;
}

.testimonial-item .quote-pic {
  position: absolute;
  right: 50px;
  top: 50px;
}

.testimonial-item .ti-author {
  overflow: hidden;
  margin-bottom: 22px;
}

.testimonial-item .ti-author .ta-pic {
  float: left;
  margin-right: 20px;
}

.testimonial-item .ti-author .ta-pic img {
  height: 76px;
  width: 76px;
  border-radius: 50%;
}

.testimonial-item .ti-author .ta-text {
  overflow: hidden;
  padding-top: 12px;
}

.testimonial-item .ti-author .ta-text h5 {
  font-size: 20px;
  color: #171822;
  font-weight: 600;
  margin-bottom: 5px;
}

.testimonial-item .ti-author .ta-text span {
  display: block;
  color: #f44949;
}

.testimonial-item p {
  font-size: 20px;
  color: #171822;
  line-height: 32px;
  font-weight: 500;
}
/*---------------------
  Speaker Section
-----------------------*/

.speaker-section {
  padding-top: 0;
}

.speaker-item {
  margin-bottom: 50px;
}

.speaker-item .si-pic img {
  min-width: 100%;
  border-radius: 2px;
}

.speaker-item .si-text .si-title {
  margin-bottom: 28px;
}

.speaker-item .si-text .si-title h4 {
  color: #171822;
  font-weight: 600;
  margin-bottom: 13px;
}

.speaker-item .si-text .si-title span {
  color: #f44949;
  font-size: 16px;
  display: block;
}

.speaker-item .si-text .si-social {
  margin-bottom: 24px;
}

.speaker-item .si-text .si-social a {
  display: inline-block;
  font-size: 16px;
  color: #171822;
  height: 40px;
  width: 40px;
  text-align: center;
  line-height: 40px;
  background: #ebebeb;
  border-radius: 50%;
  margin-right: 5px;
}

.speaker-item .si-text .si-social a:hover {
  background-image: -o-linear-gradient(
    225deg,
    #ff3cac 0%,
    #784ba0 50%,
    #2b86c5 100%
  );
  background-image: linear-gradient(
    225deg,
    #ff3cac 0%,
    #784ba0 50%,
    #2b86c5 100%
  );
  color: #ffffff;
}

.speaker-item .si-text p {
  color: #707070;
  line-height: 26px;
}

.load-more {
  text-align: center;
  padding-top: 10px;
}
/* ... */

